@@ -13,3 +13,5 @@ registry=http://your-host:8081/repository/npm-group/
 _auth=YWRtaW46YWRtaW4xMjM=
 
 https://blog.sonatype.com/using-nexus-3-as-your-repository-part-3-docker-images
+
+-XX:+PrintGCDetails -XX:+PrintGCTimeStamps
